correction contrast page contact

--- a/style.css
+++ b/style.css
@@ -781,7 +781,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #ffdac8!important;
 }
 
 .btn-atomic-tangerine {
